# adventofcode-public

./: .gitignore  README.md  pyproject.toml
src/2015/01/: 01.py
src/2015/02/: 02.py
src/2015/03/: 03.py
src/2015/05/: 05.py
src/2015/06/: 06.py
src/2015/07/: 07.py
src/2015/10/: 10.py
src/2024/01/: 01.py
src/2024/02/: 02.py
src/2024/03/: 03.py
src/2024/04/: 04.py
src/2024/05/: 05.py
src/2024/06/: 06.py
src/2024/07/: 07.py
src/2024/08/: 08.py
src/2024/09/: 09.py
src/2024/10/: 10.py
src/2024/11/: 11.py
src/2024/12/: 12.py
src/2024/13/: 13.py
src/2024/14/: 14.py
src/2024/15/: 15.py
src/2024/16/: 16.py
src/2024/17/: 17.py
src/2024/18/: 18.py
src/2024/19/: 19.py
src/2024/20/: 20.py
src/2024/21/: 21.py
src/2024/22/: 22.py
src/2024/23/: 23.py
src/2024/24/: 24.py
src/2024/25/: 25.py
src/templates/: 01.py
src/utils/: grids.py  input.py  solutions.py
