[tool.poetry]
name = "adventofcode-public"
version = "0.1.0"
description = ""
authors = ["Vinoaj (Vinny) Vijeyakumaar <vinoaj@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
