[tool.poetry]
name = "adventofcode-public"
version = "0.1.0"
description = ""
authors = ["Vinoaj (Vinny) Vijeyakumaar <vinoaj@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
regex = "^2024.11.6"
devtools = "^0.12.2"
networkx = "^3.4.2"
pydot = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
